--- a/public/ats/error.html
+++ b/public/ats/error.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" 
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
   <head>
-    <title>Aviko Tournament Schedule</title>
+    <title>2 Brüder Cup - Scheduler</title>
   </head>
   <body>
     Er is een onbekende fout opgetreden. De beheerders van de website zijn op de hoogte gebracht. Probeer het later nogmaals.<br />
